# EpitechProject

CPE_C/BSQ/: Makefile  README.md  find_biggest_square.c  is_square_of_size.c  load_2d_arr_from_file.c  load_file_in_memory.c
CPE_C/corewar/: Makefile  README.md  op.c  test.sh
CPE_C/dante/: Makefile  README.md
CPE_C/getnextline/: README.md  get_next_line.c  get_next_line.h
CPE_C/lemin/: Makefile  README.md  check_input.c  check_input_cpy.c  check_input_room.c  count_args.c  create_lemin_t.c  create_list.c  create_way.c  find_room.c  find_size.c  is_something.c  is_something_ci.c  main.c  moved_ant.c  rooms_len.c  ways_possible.c
CPE_C/matchstick/: Makefile  README.md  check_map.c  ia.c  main.c  matchstick.c  move_ia.c  prepare_map.c  test.sh
CPE_C/pushswap/: Makefile  README.md  main.c  mini_ope_pushswap.c  ope_pushswap.c  other_funct.c  pushswap.c  test.sh
CPP_C++/arcade/: Arcade.cpp  Makefile  README.md  main.cpp
CPP_C++/babel/: CMakeLists.txt  GetOpt.cpp  GetOpt.hpp  README.md  conanfileLinux.txt  conanfileWindows.txt
CPP_C++/babel/UI/: CMakeLists.txt  UIHandler.cpp  UIHandler.hpp  authmenu.cpp  authmenu.h  authmenu.ui  callpop.cpp  callpop.h  callpop.ui  chatwidget.cpp  chatwidget.h  chatwidget.ui  gmessage.ui  main.cpp  notifpopup.ui  popupbinary.cpp  popupbinary.h  popupbinary.ui  styledialog.ui
CPP_C++/babel/server/: AddFriend.cpp  AddFriend.hpp  CMakeLists.txt  Call.cpp  Call.hpp  ChatRoom.cpp  ChatRoom.hpp  DeleteFriend.cpp  DeleteFriend.hpp  Disconnect.cpp  Disconnect.hpp  GetContactMessage.cpp  GetContactMessage.hpp  Login.cpp  Login.hpp  Message.cpp  Message.hpp  MySqlite.cpp  MySqlite.hpp  NewStatus.cpp  NewStatus.hpp  Participant.hpp  Person.cpp  Person.hpp  ReadMessage.cpp  ReadMessage.hpp  Signup.cpp  Signup.hpp  TcpServer.cpp  TcpServer.hpp  WriteMessage.cpp  WriteMessage.hpp  main.cpp
CPP_C++/babel/server/db/: docker-compose.yml  schema.sql
CPP_C++/nanotekspice/: ISystem.hpp  Makefile  README.md  System.cpp  System.hpp  main.cpp  my_except.cpp  my_except.hpp
CPP_C++/plazza/: Factory.cpp  Makefile  PipeIPC.cpp  PipeIPC.hpp  Pizza.cpp  Pizza.hpp  Pizza.plz  Process.cpp  Process.hpp  README.md  main.cpp
CPP_C++/rtype/: .gitignore  CMakeLists.txt  README.md  conanfile.txt
CPP_C++/rtype/RFC/: rfc.hpp
CPP_C++/rtype/RTypeObjects/: CMakeLists.txt  Enemy.cpp  Enemy.hpp  Missile.cpp  Missile.hpp  Obstacle.cpp  Obstacle.hpp  Player.cpp  Player.hpp  PowerUp.cpp  PowerUp.hpp  RTypeObject.cpp  RTypeObject.hpp
CPP_C++/rtype/client/: AClient.cpp  AClient.hpp  CMakeLists.txt  CommandHandler.hpp  Core.cpp  Core.hpp  main.cpp
CPP_C++/rtype/client/UI/final/: Makefile
CPP_C++/rtype/client/UI/final/src/: AScene.cpp  AScene.hpp  End.cpp  End.hpp  Game.cpp  Game.hpp  Intro.cpp  Intro.hpp  Menu.cpp  Menu.hpp  main.cpp  my.hpp  utils.cpp
CPP_C++/rtype/doc/: RFC.md
CPP_C++/rtype/factory/: CMakeLists.txt  RTypeFactory.cpp  RTypeFactory.hpp
CPP_C++/rtype/factory/enemy/: Sentinel.cpp  Sentinel.hpp  Soldier.cpp  Soldier.hpp
CPP_C++/rtype/factory/missile/: AllyMissile.cpp  AllyMissile.hpp  EnemyMissile.cpp  EnemyMissile.hpp
CPP_C++/rtype/factory/obstacle/: DestroyableObstacle.cpp  DestroyableObstacle.hpp  SmallOstacle.cpp  SmallOstacle.hpp
CPP_C++/rtype/factory/player/: RTPlayer.cpp  RTPlayer.hpp
CPP_C++/rtype/gameObjects/: AnimatedSprite.cpp  AnimatedSprite.hpp  Collider.cpp  Collider.hpp  CubeCollider.cpp  CubeCollider.hpp  CubicObject.cpp  CubicObject.hpp  Drawable.cpp  Drawable.hpp  Event.hpp  GameObject.cpp  GameObject.hpp  Material.cpp  Material.hpp  PointerHandler.cpp  PointerHandler.hpp  RoundObject.cpp  RoundObject.hpp  SphereCollider.cpp  SphereCollider.hpp  SphericObject.cpp  SphericObject.hpp  SquareObject.cpp  SquareObject.hpp  Transform.cpp  Transform.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Windows.cpp  Windows.hpp
CPP_C++/rtype/lib/: DLLoader.cpp  DLLoader.hpp  DirReader.cpp  DirReader.hpp
CPP_C++/rtype/server/: CMakeLists.txt
CPP_C++/rtype/server/communication/: ChatRoom.cpp  ChatRoom.hpp  Participant.hpp  Person.cpp  Person.hpp  ReadMessage.cpp  ReadMessage.hpp  TcpServer.cpp  TcpServer.hpp  UdpGestion.cpp  UdpGestion.hpp  WriteMessage.cpp  WriteMessage.hpp  main.cpp
CPP_C++/rtype/server/communication/action/: RoomManager.cpp  RoomManager.hpp
CPP_C++/rtype/server/communication/include/: header.hpp  player.hpp  room.hpp
CPP_C++/rtype/server/communication/udp/: ReadUdpMessage.cpp  ReadUdpMessage.hpp  UdpServer.cpp  UdpServer.hpp  WriteUdpMessage.cpp  WriteUdpMessage.hpp
CPP_C++/rtype/server/game/: Game.hpp  RType.cpp  RType.hpp  RTypeExtern.cpp
CPP_C++/rtype/structures/: RTypeEnum.hpp  RTypeEvents.hpp  RTypeNetworkInput.hpp  RTypeNetworkObject.hpp
FUN_Haskell/EvalExpr/: Makefile  README.md  package.yaml
FUN_Haskell/HAL/: Makefile  README.md  package.yaml
FUN_Haskell/imageCompressor/: Makefile  README.md  imageCompressor.cabal
FUN_Haskell/imageCompressor/bonus/: compressImage.py
FUN_Haskell/imageCompressor/src/: DataType.hs  ImageCompressor.hs  Lib.hs  Main.hs  Parser.hs
FUN_Haskell/koak/: Makefile  README.md  package.yaml
FUN_Haskell/pushswap_checker/: Makefile  README.md  pushswap_checker.hs
FUN_Haskell/wolfram/: Makefile  README.md  wolfram.hs
MAT_Mathematic/101pong/: README.md
MAT_Mathematic/102architect/: 102architect.c  Makefile  README.md  (+2 more)
PSU_Unix/zappy/reseau/server/: CMakeLists.txt  Makefile
PSU_Unix/zappy/reseau/server/include/: my.h  rfc.h  rfc_ia.h  struct.h
PSU_Unix/zappy/reseau/server/srcs/: client_node.c  create_ia.c  death_player.c  free_game.c  game_gestion.c  game_rules.c  gest_node.c  graph_init.c  graph_other.c  graph_players.c  graph_times.c  graphicals_com.c  graphs.c  graphs_egg.c  ia_command_basic.c  ia_command_fork.c  ia_command_inc.c  ia_command_inv.c  ia_command_other.c  ia_command_takeset.c  ia_commands.c  ia_position.c  init_map.c  init_serv.c  look.c  look_tools.c  main.c  my_tab.c  node_tools.c  other_tools.c  remove_graph.c  remove_node.c  remove_player.c  serv_tools.c  server.c  server_read_graph.c  server_read_ia.c  server_send.c  tools.c
(+2000 files in other folders)
