name:                imageCompressor
version:             1.0.0
-- synopsis:
-- description:
--homepage:            https://github.com/githubuser/a#readme
author:              Pival
--maintainer:          example@example.com
--copyright:           2020 Author name here
--category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable imageCompressor
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    random
  other-modules:
    ImageCompressor
    Lib
    Parser
    DataType
  